say yeah when the megbutton is clicked

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 <body>
   <h1>User Directory</h1>
+  <p class ="greeting">Welcom, friend</p>
   <button>Click Me</button>
-
-  <script src="index.js"></script>
+<button id = "megabutton">no Click me</button>
+<button class="greeting">greeting</button>  
+<script src="index.js"></script>
 </body>
 </html>
