click button changes text

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
   <h1>User Directory</h1>
-  <p class ="greeting">Welcom, friend</p>
-  <button>Click Me</button>
-<button id = "megabutton">no Click me</button>
+  <p class ="greeting">Welcome, friend</p>
+
+
 <button class="greeting">greeting</button>  
 <script src="index.js"></script>
 </body>
