changed the button so h1 change

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 <link rel="stylesheet" href="index.css">
 </head>
 <body>
-  <h1>User Directory</h1>
-  <p class ="greeting">Welcome, friend</p>
+  <h1 class = "greeting">User Directory</h1>
+  <h2  >Second Heading</h2>
+  <h3>Third Heading</h3>
+  <p>Welcome, friend</p>
 
 
 <button class="greeting">greeting</button>  
