added multiple headings to the page and made the button change the second one

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <h1 class = "greeting">User Directory</h1>
-  <h2  >Second Heading</h2>
-  <h3>Third Heading</h3>
+  <h1  id = "h2" >Second Heading</h1>
+  <h1>Third Heading</h1>
   <p>Welcome, friend</p>
 
 
