Added a form that lets us type and allows to intput text to change the heading name

--- a/index.html
+++ b/index.html
@@ -13,8 +13,18 @@
   <h1>Third Heading</h1>
   <p>Welcome, friend</p>
 
+<button class="greeting">greeting</button>
+<br>
+<br>
 
-<button class="greeting">greeting</button>  
+<form> 
+<label> Type your name: <br></label>
+<input type  = "text" name = "Name" id ="txtName"/> 
+<input type ="button" value = "submit" onclick = "changeName()"/>
+</form>
+
+
+
 <script src="index.js"></script>
 </body>
 </html>
