reset the form after each submit

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
           <label for="userName">Name</label>
           <input type="text" name="userName">
         </p>
-    
+        <label for="age">Age</label>
+        <input type="text" name="age">
             <button type="submit">Submit</button>
 </form>
     
