focus username and page load after each submit

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <form id="userForm">
         <p>
           <label for="userName">Name</label>
-          <input type="text" name="userName">
+          <input type="text" name="userName" autofocus>
         </p>
         <label for="age">Age</label>
         <input type="text" name="age">
