use a number input for age

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           <input type="text" name="userName" autofocus>
         </p>
         <label for="age">Age</label>
-        <input type="text" name="age">
+        <input type="number" name="age">
             <button type="submit">Submit</button>
 </form>
     
