Use a template literal instead of an old school string

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         </p>
         <label for="age">Age</label>
         <input type="number" name="age">
+        <br> <br>
             <button type="submit">Submit</button>
+            <button type="reset">Clear</button>
 </form>
     
 <div id="users">
