--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <input type="color" name="favoriteColor" value=#000000>
           </p>
       
-          <button type="submit">Go</button>
+          <button type="submit" class="submitBut">Submit</button>
         </form>
       
         <div id="users"></div>
